--- a/styles/globals.css
+++ b/styles/globals.css
@@ -21,3 +21,20 @@ p {
 .light {
   background-color: #f1f1f1;
 }
+
+button {
+  padding: 10px 20px;
+  margin: 10px 10px 10px 0; /* 여기서 왼쪽 마진을 0으로 설정 */
+  border: none;
+  border-radius: 10px;
+  background-color: #f0f0f0;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+/* 활성화된 버튼 스타일 */
+button.active {
+  border: 1px solid #28a745;
+  color: #28a745;
+  background-color: white;
+}
